  actual subtype (which is, really, most of the time).

o get_storage() returns void*

  There is no need for casts in non-C++ code.


Building and installing
-----------------------

o -fvisibility=hidden is now the default

  This means that PMOD_EXPORT is now actually needed on systems like
  Linux and MacOSX. It also means that the binary is slightly smaller
  and faster.

o clang compilation fixes (bignum overflow checks, misc)

  It is now possible to compile pike using a modern clang compiler.

o Removed bundles

  Pike no longer comes with copies of some libraries, and the support
  for that in the makefile has been removed.

o Several OS/2 and windows compilation fixes


Lots of bug fixes
-----------------

o Fixed symbol resolution with deep inherits and mixins

o Fixed PNG 4bpl indexed mode with alpha

o The _sprintf LFUN now works with %F

o foreach( arr[-two()..], string x), where two() returns 2 will no
  longer iterate over the first element in the array three times or
  crash.

o Fixed a typo from 2001-05-05 that caused a lot of countries to
  recide on the continent ',Europa' instead of "Europa" in
  Geography.Countries.

  Obviously the continent is not that often checked.

o Fixed interresting bug in the constant number parsing for octal
  numbers in escapes.

  For whatever reason 8:s were accepted for every location except the
  first in octal numbers, so 078 was considered an alias for 0100.

  This could cause issues at times, and will result in string parsing
  being somewhat different:

  |  Pike v7.8 release 700 running Hilfe v3.5 (Incremental Pike Frontend)
  |  > "\078";
  |  (1) Result: "@"
  |  Pike v8.0 release 3 running Hilfe v3.5 (Incremental Pike Frontend)
  |  > "\078";
  |  (1) Result: "\a8"

o A lot more, see the (more or less) full changelog for more info:

   http://pike-librarian.lysator.liu.se/index.xml?m=pike.git&start=forever&branch=7.9,8.0&template=logonly.inc